# jetem

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  shell-integration.zsh
docs/: notes.md  plugin-api.md  roadmap.md
examples/: demo.sh  font.toml  keys.toml  plugins.toml  theme.toml
examples/plugins/: ai.py  hello.py  mux.py  oops.py  richout.py  theme.py
sdk/: jetem_plugin.py  terminal_plugin.py
src/: ansi.rs  block.rs  cell.rs  config.rs  font.rs  grid.rs  keys.rs  layout.rs  main.rs  pane.rs  panel.rs  parser.rs  plugin.rs  pty.rs  recall.rs  render.rs  screen.rs  search.rs  selection.rs  theme.rs  window.rs
