[package]
name = "terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
fontdue = "0.9.3"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
softbuffer = "0.4.8"
vte = "0.15.0"
winit = "0.30.13"
